--- a/Assignment-5/src/_breakpoints.scss
+++ b/Assignment-5/src/_breakpoints.scss
@@ -1,3 +1,3 @@
-$breakPoint1: 959px;
-$breakPoint2: 767px;
-$breakPoint3: 459px;
+$large-screen-breakpoint: 959px;
+$medium-screen-breakpoint: 767px;
+$small-screen-breakpoint: 459px;
